Manifests/nginx-srv-loadbal.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
spec:
  selector:
    app: nginx
  ports:
    - port: 8001
      targetPort: 80
  type: LoadBalancer
