Manifests/nginx-srv-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
  - port: 8000
    targetPort: 80
    nodePort: 30003
  selector:
    app: nginx
