Manifests/nginx-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
 ports:
 - port: 8000
   targetPort: 80
 selector:
   app: nginx
